@@ -1,5 +1,11 @@
 # expense-tracker-desktop
 
+# How to run?
+
+`java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -jar expense-tracker-desktop.jar`
+
+*you can find the jar file in the documents folder.*
+
 ## UML
 
 ![UML](https://github.com/hcyildirim/expense-tracker-desktop/blob/master/documents/Expense%20Tracker%20UML.png)
